--- a/CitelyDesktop/.classpath
+++ b/CitelyDesktop/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="lib" path="/home/greg/Downloads/swt-3.5.2-gtk-linux-x86/swt-debug.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
