--- a/trunk/CitelyDesktop/.classpath
+++ b/trunk/CitelyDesktop/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="/home/greg/Downloads/swt-3.5.2-gtk-linux-x86/swt-debug.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/CitelyCommon"/>
+	<classpathentry kind="con" path="SWT_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
