make the parent POM a pom packaging type

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>groupId</groupId>
     <artifactId>citely</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
+
+
 
     
 </project>
