--- a/citely-common/pom.xml
+++ b/citely-common/pom.xml
@@ -2,11 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>groupId</groupId>
+    <parent>
+        <artifactId>citely</artifactId>
+        <groupId>org.blueclawsoft.citely</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <artifactId>citely-common</artifactId>
-    <version>1.0-SNAPSHOT</version>
 
     <properties>
         <querydsl.version>3.5.0</querydsl.version>
