modify the citely-web POM references
Add Spring, JUnit, and parent references to citely-web project/artifact

--- a/citely-web/pom.xml
+++ b/citely-web/pom.xml
@@ -4,9 +4,43 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.gregdavis.citely</groupId>
-    <artifactId>citely-web</artifactId>
-    <version>0.9</version>
+    <parent>
+        <artifactId>citely</artifactId>
+        <groupId>org.blueclawsoft.citely</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
+    <artifactId>citely-web</artifactId>
+
+    <properties>
+        <spring.version>4.1.3.RELEASE</spring.version>
+    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- Spring dependencies -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
