--- a/citely-web/pom.xml
+++ b/citely-web/pom.xml
@@ -18,6 +18,7 @@
         <bootstrap.version>3.3.2</bootstrap.version>
         <jquery.version>2.1.3</jquery.version>
         <jstl.version>1.2</jstl.version>
+        <thymeleaf.version>2.1.4.RELEASE</thymeleaf.version>
     </properties>
 
     <dependencies>
@@ -82,6 +83,25 @@
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>${jstl.version}</version>
+        </dependency>
+
+        <!-- Thymeleaf -->
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+            <version>${thymeleaf.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf-spring4</artifactId>
+            <version>${thymeleaf.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>nz.net.ultraq.thymeleaf</groupId>
+            <artifactId>thymeleaf-layout-dialect</artifactId>
+            <version>1.2.8</version>
         </dependency>
 
     </dependencies>
