Update dependencies in POM files
Update to latest versions of dependencies except for Thymeleaf, which needs
some migration effort.  Also, set build text encoding to UTF-8.

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,9 @@
         <module>citely-common</module>
         <module>citely-web</module>
     </modules>
-
-
     
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
 </project>
