--- a/citely-web/pom.xml
+++ b/citely-web/pom.xml
@@ -14,10 +14,10 @@
     <artifactId>citely-web</artifactId>
 
     <properties>
-        <spring.version>4.1.6.RELEASE</spring.version>
-        <bootstrap.version>3.3.2</bootstrap.version>
-        <jquery.version>2.1.3</jquery.version>
-        <jstl.version>1.2</jstl.version>
+        <spring.version>4.3.2.RELEASE</spring.version>
+        <spring-security-oauth.version>2.0.10.RELEASE</spring-security-oauth.version>
+        <bootstrap.version>3.3.7</bootstrap.version>
+        <jquery.version>3.0.0</jquery.version>
         <thymeleaf.version>2.1.4.RELEASE</thymeleaf.version>
     </properties>
 
@@ -28,6 +28,12 @@
             <artifactId>tomcat-servlet-api</artifactId>
             <version>7.0.64</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
         </dependency>
 
         <dependency>
@@ -68,6 +74,12 @@
             <version>${spring.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+            <version>${spring-security-oauth.version}</version>
+        </dependency>
+
         <!-- Bootstrap -->
         <dependency>
             <groupId>org.webjars</groupId>
@@ -87,12 +99,6 @@
             <version>${jquery.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>jstl</artifactId>
-            <version>${jstl.version}</version>
-        </dependency>
-
         <!-- Thymeleaf -->
         <dependency>
             <groupId>org.thymeleaf</groupId>
@@ -110,6 +116,12 @@
             <groupId>nz.net.ultraq.thymeleaf</groupId>
             <artifactId>thymeleaf-layout-dialect</artifactId>
             <version>1.2.8</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
         </dependency>
 
     </dependencies>
@@ -165,6 +177,14 @@
                 <version>2.6</version>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
