--- a/citely-web/src/main/resources/application.properties
+++ b/citely-web/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 security.basic.enabled=false
+
+google.accessTokenUri=https://www.googleapis.com/oauth2/v3/token
+google.userAuthorizationUri=https://accounts.google.com/o/oauth2/auth
+google.redirectUri=http://localhost:8080/google-login
