--- a/citely-web/pom.xml
+++ b/citely-web/pom.xml
@@ -14,13 +14,14 @@
     <artifactId>citely-web</artifactId>
 
     <properties>
-        <spring-boot.version>2.0.0.RC1</spring-boot.version>
-        <spring.version>5.0.1.RELEASE</spring.version>
-        <spring-security-oauth.version>2.2.0.RELEASE</spring-security-oauth.version>
-        <spring-security-jwt.version>1.0.8.RELEASE</spring-security-jwt.version>
+        <spring-boot.version>2.0.6.RELEASE</spring-boot.version>
+        <spring.version>5.1.1.RELEASE</spring.version>
+        <spring-security-oauth.version>2.3.4.RELEASE</spring-security-oauth.version>
+        <spring-security-jwt.version>1.0.9.RELEASE</spring-security-jwt.version>
         <bootstrap.version>3.3.7</bootstrap.version>
         <jquery.version>3.2.1</jquery.version>
-        <thymeleaf.version>3.0.9.RELEASE</thymeleaf.version>
+        <thymeleaf.version>3.0.10.RELEASE</thymeleaf.version>
+        <thymeleaf-extras.version>3.0.3.RELEASE</thymeleaf-extras.version>
     </properties>
 
     <dependencies>
@@ -39,7 +40,7 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
-            <version>5.0.0.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
@@ -143,13 +144,13 @@
         <dependency>
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-springsecurity4</artifactId>
-            <version>3.0.2.RELEASE</version>
+            <version>${thymeleaf-extras.version}</version>
         </dependency>
 
         <dependency>
             <groupId>nz.net.ultraq.thymeleaf</groupId>
             <artifactId>thymeleaf-layout-dialect</artifactId>
-            <version>2.2.2</version>
+            <version>2.3.0</version>
         </dependency>
 
         <dependency>
@@ -161,7 +162,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.9.2</version>
+            <version>2.9.7</version>
         </dependency>
 
     </dependencies>
